[tool.poetry]
name = "aiop4"
version = "0.1.0"
description = "asyncio P4Runtime Python client"
authors = ["Vinicius Arcanjo <viniarck@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
p4runtime = "1.4.0rc5"
grpcio = "^1.48.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pre-commit = "^2.20"
flake8 = "^5.0"
black = "^22.6"
isort = "^5.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
