[tool.poetry]
name = "aiop4"
version = "0.4.1"
description = "asyncio P4Runtime Python client"
authors = ["Vinicius Arcanjo <viniarck@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/viniarck/aiop4"
keywords = ["p4", "p4runtime", "p4runtime-client", "client", "aiop4"]

[tool.poetry.dependencies]
python = "^3.11"
p4runtime = "1.4.1"
grpcio = "1.51.3"
googleapis-common-protos = "1.54.0"
protobuf = "3.20.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pre-commit = "^2.20"
flake8 = "^5.0"
black = "^25.1"
isort = "^5.10"
tox = "^4.26"
pytest-cov = "^3.0"
pytest-asyncio = "^0.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
